--- a/styles.css
+++ b/styles.css
@@ -4,37 +4,38 @@ body {
   line-height: 1;
 }
 
-text {
+/* text {
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-}
+} */
 
 .jumbotron {
   text-align: center;
 
   background-color: transparent;
-  color: rgb(37, 29, 29);
+  color: rgba(255, 255, 255, 0.856);
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid rgb(72, 100, 110);
+  background-color:cadetblue 
 }
 
 .description {
   white-space: pre-wrap;
 }
 
-.time-block {
-  text-align: center;
-  border-radius: 15px;
-}
+
 
 .time-block {
+
   white-space: pre-wrap;
   height: 2rem;
   border-top: 1px solid white;
+  text-align: center;
+  border-radius: 15px;
 }
 
 .hour {
@@ -70,7 +71,9 @@ text {
 }
 
 input {
-  width: 100%;
+  width: 115%;
   box-sizing: border-box;
   border: none;
+  font-size:150%;
 }
+
